--- a/platform/RemotingNG/RemotingNG_CE_vs90.vcproj
+++ b/platform/RemotingNG/RemotingNG_CE_vs90.vcproj
@@ -539,7 +539,13 @@
 			<Filter
 				Name="Header Files">
 				<File
+					RelativePath=".\include\Poco\RemotingNG\Authenticator.h"/>
+				<File
+					RelativePath=".\include\Poco\RemotingNG\Authorizer.h"/>
+				<File
 					RelativePath=".\include\Poco\RemotingNG\Context.h"/>
+				<File
+					RelativePath=".\include\Poco\RemotingNG\Credentials.h"/>
 				<File
 					RelativePath=".\include\Poco\RemotingNG\EventListener.h"/>
 				<File
@@ -556,7 +562,13 @@
 			<Filter
 				Name="Source Files">
 				<File
+					RelativePath=".\src\Authenticator.cpp"/>
+				<File
+					RelativePath=".\src\Authorizer.cpp"/>
+				<File
 					RelativePath=".\src\Context.cpp"/>
+				<File
+					RelativePath=".\src\Credentials.cpp"/>
 				<File
 					RelativePath=".\src\EventListener.cpp"/>
 				<File
