--- a/platform/RemotingNG/RemotingNG_vs110.vcxproj
+++ b/platform/RemotingNG/RemotingNG_vs110.vcxproj
@@ -299,7 +299,10 @@
     <ClInclude Include="include\Poco\RemotingNG\SerializerBase.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TypeDeserializer.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TypeSerializer.h"/>
+    <ClInclude Include="include\Poco\RemotingNG\Authenticator.h"/>
+    <ClInclude Include="include\Poco\RemotingNG\Authorizer.h"/>
     <ClInclude Include="include\Poco\RemotingNG\Context.h"/>
+    <ClInclude Include="include\Poco\RemotingNG\Credentials.h"/>
     <ClInclude Include="include\Poco\RemotingNG\EventListener.h"/>
     <ClInclude Include="include\Poco\RemotingNG\Listener.h"/>
     <ClInclude Include="include\Poco\RemotingNG\ServerTransport.h"/>
@@ -326,7 +329,10 @@
     <ClCompile Include="src\Deserializer.cpp"/>
     <ClCompile Include="src\Serializer.cpp"/>
     <ClCompile Include="src\SerializerBase.cpp"/>
+    <ClCompile Include="src\Authenticator.cpp"/>
+    <ClCompile Include="src\Authorizer.cpp"/>
     <ClCompile Include="src\Context.cpp"/>
+    <ClCompile Include="src\Credentials.cpp"/>
     <ClCompile Include="src\EventListener.cpp"/>
     <ClCompile Include="src\Listener.cpp"/>
     <ClCompile Include="src\ServerTransport.cpp"/>
