--- a/platform/RemotingNG/RemotingNG_x64_vs120.vcxproj.filters
+++ b/platform/RemotingNG/RemotingNG_x64_vs120.vcxproj.filters
@@ -2,31 +2,31 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Remoting">
-      <UniqueIdentifier>{3b311e96-2915-4a6d-b498-ddd53e225a67}</UniqueIdentifier>
+      <UniqueIdentifier>{7a876687-a2e2-4c29-b264-bd28108748f7}</UniqueIdentifier>
     </Filter>
     <Filter Include="Remoting\Header Files">
-      <UniqueIdentifier>{7a6f327a-b81d-47c2-8f83-01cbd9f01641}</UniqueIdentifier>
+      <UniqueIdentifier>{0a0cf1c6-8f12-46c5-ad73-ff7259985661}</UniqueIdentifier>
     </Filter>
     <Filter Include="Remoting\Source Files">
-      <UniqueIdentifier>{91e40e5c-b29c-4d1a-8228-cbfe22b3ae91}</UniqueIdentifier>
+      <UniqueIdentifier>{3bd99e7d-fa24-4605-ad59-2f21f92db3e2}</UniqueIdentifier>
     </Filter>
     <Filter Include="Serialization">
-      <UniqueIdentifier>{0c0fb591-8fbe-418e-b8ab-f8de08551ab4}</UniqueIdentifier>
+      <UniqueIdentifier>{651e18c3-c08d-4695-a64c-426adc6f7590}</UniqueIdentifier>
     </Filter>
     <Filter Include="Serialization\Header Files">
-      <UniqueIdentifier>{2e447823-87e3-4289-a578-eb9c0d226baf}</UniqueIdentifier>
+      <UniqueIdentifier>{893751bf-e9da-425d-be36-25214d0e5ed7}</UniqueIdentifier>
     </Filter>
     <Filter Include="Serialization\Source Files">
-      <UniqueIdentifier>{bd1b4ae9-ce0a-4020-8a38-7a09f910f715}</UniqueIdentifier>
+      <UniqueIdentifier>{7c7bb03f-a3e6-4e69-bcc8-3e1da1d367f8}</UniqueIdentifier>
     </Filter>
     <Filter Include="Transport">
-      <UniqueIdentifier>{21e7c214-e9ef-4771-8a94-5a12da872cdd}</UniqueIdentifier>
+      <UniqueIdentifier>{5db5d7a4-a373-4412-a109-2561c97d0327}</UniqueIdentifier>
     </Filter>
     <Filter Include="Transport\Header Files">
-      <UniqueIdentifier>{1ce00d47-430f-498e-9be7-ff80ce775799}</UniqueIdentifier>
+      <UniqueIdentifier>{b18cbea6-be18-4716-92a8-f049c1495a50}</UniqueIdentifier>
     </Filter>
     <Filter Include="Transport\Source Files">
-      <UniqueIdentifier>{4c6a276b-0808-49b9-98ad-cc3cac8e5599}</UniqueIdentifier>
+      <UniqueIdentifier>{4f85a376-6f88-48e0-8812-9f1409628a2d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -99,7 +99,16 @@
     <ClInclude Include="include\Poco\RemotingNG\TypeSerializer.h">
       <Filter>Serialization\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\Authenticator.h">
+      <Filter>Transport\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\Authorizer.h">
+      <Filter>Transport\Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\Context.h">
+      <Filter>Transport\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\Credentials.h">
       <Filter>Transport\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\EventListener.h">
@@ -176,7 +185,16 @@
     <ClCompile Include="src\SerializerBase.cpp">
       <Filter>Serialization\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Authenticator.cpp">
+      <Filter>Transport\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Authorizer.cpp">
+      <Filter>Transport\Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\Context.cpp">
+      <Filter>Transport\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Credentials.cpp">
       <Filter>Transport\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\EventListener.cpp">
