--- a/platform/RemotingNG/TCP/Makefile
+++ b/platform/RemotingNG/TCP/Makefile
@@ -15,6 +15,7 @@ objects = \
 	Frame \
 	FrameQueue \
 	Listener \
+	CredentialsStore \
 	ServerConnection \
 	ServerConnectionFactory \
 	ServerTransport \
